[gd_scene load_steps=5 format=3 uid="uid://gtctbxlpobla"]

[ext_resource type="Script" uid="uid://c3lv57jtowbge" path="res://src/resources/mechcomponents/torsos/shop_menu_item_panel.gd" id="1_m4wat"]
[ext_resource type="Texture2D" uid="uid://c7o77qubs8por" path="res://assets/graphics/UI/MenuListItem_normal.png" id="1_opilo"]
[ext_resource type="FontFile" uid="uid://50qlm4au2mjm" path="res://assets/graphics/Fonts/Valorax-lg25V.otf" id="2_25v2b"]
[ext_resource type="Texture2D" uid="uid://cc84x2r6fhp0i" path="res://assets/graphics/UI/MenuListItem_hover.png" id="2_temo5"]

[node name="Control" type="TextureButton"]
custom_minimum_size = Vector2(0, 20)
anchors_preset = -1
anchor_right = 0.133
anchor_bottom = 0.045
offset_right = -0.120003
offset_bottom = 3.8
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_opilo")
texture_hover = ExtResource("2_temo5")
stretch_mode = 0
script = ExtResource("1_m4wat")

[node name="ItemName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = -4.0
offset_right = 31.5
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_25v2b")
theme_override_font_sizes/font_size = 9
text = "HEADXUT234098"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="ComponentAvailableIndicator" type="Label" parent="."]
layout_mode = 1
offset_left = 8.0
offset_right = 13.0
offset_bottom = 19.0
theme_override_colors/font_color = Color(0.99737, 0.876865, 0.440864, 1)
theme_override_fonts/font = ExtResource("2_25v2b")
text = "!"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
